docs/style.css
body {
	font-family: Arial, sans-serif;
	margin: 0;
	padding: 0;
	
	background-color: #676ca0;
	transition: background-color 2s;

	display: flex;
	flex-direction: column;

	min-height: 100vh;
}
header {
	color: #fff;
	padding: 20px;
	text-align: center;
	overflow: hidden;

	-webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
footer {
	z-index: 10;
	color: #fff;
	padding: 10px;
	text-align: center;
}
.container {
	z-index: 10;
	background-color: #fffd;
	flex-grow: 1;

	display: flex;
	flex-direction: column;
}
.input-container {
	width: calc(min(600px, 100vw - 40px));
	margin: 20px auto;
	padding: 20px;
	border-radius: 5px;
	box-sizing: border-box;
	background-color: #fff;
	box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
}
.input-field {
	width: 100%;
	padding: 10px;
	font-size: 18px;
	margin-bottom: 20px;
	box-sizing: border-box;
	border: 1px solid #ccc;
	border-radius: 3px;	
}

.output {
	margin-top: 20px;
}

#error-message {
	font-weight: bold;
	height: 1em;
	display: block;
	color: red;
	margin-bottom: 20px;
	transition: opacity 0.2s;
}

.horizontal {
	display: flex;
	align-items: center;
}

.horizontal > p {
	flex: 2;
	text-align: right;
}

.horizontal > math {
	flex: 3;
	transition: opacity 0.2s;
}

.horizontal > div {
	flex: 1;
}





hr {
	border-color: #0003;
	margin: 15px 0;
}

a {
	color: #fff;
}

a:hover {
	text-decoration: none;
}

header h1 {
	position: relative;
	z-index: 1;
}

#c-letter, #c-clicked {
	display: inline-block;
	position: relative;
	cursor: pointer;
}

#c-letter span, #c-clicked span {
	position: absolute;
	display: block;

	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: -1;

	scale: 1.4;
	border-radius: 4px;
	background-color: #e28f29;

	opacity: 0;
	transition: opacity 2s, scale 0.4s cubic-bezier(.46,1.78,.77,1.01);
	animation: infinite spin 20s linear;
}

#c-letter:hover span, #c-clicked span{
	opacity: 1;
}

@keyframes spin {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

#secret {
	text-align: right;
	padding: 10px;
	color: #0004;
	cursor: none;
	position: relative;
	z-index: 10;
}

#tooltip {
	position: absolute;
	top: 4px;
	right: 130px;
	background-color: #000;
	color: #fff;
	padding: 5px;
	border-radius: 5px;
	opacity: 0;
	transition: opacity 0.2s;
}

#tooltip::after {
	content: '';
	position: absolute;

	background-color: #000;
	width: 10px;
	height: 10px;

	transform: rotate(45deg) translate(0, 50%);
	right: -7px;
}

#secret:hover #tooltip {
	opacity: 1;
}

#seven-cs-result {
	box-shadow: inset 0 0 15px #4b2f0d41;
	border-radius: 6px;
	scale: 1 0;
	transition: scale 1s;
}

#hidden-header {
	opacity: 0;
	transition: opacity 1s;	
	position: relative;
	z-index: 10;
}

article {
	width: calc( min(900px, 100vw - 100px) );
	margin: auto;
	line-height: 1.3em;
	font-size: 1.15em;
}

article a {
	color: #e28f29;
}

article a:hover {
	color: #b47220;
}

h2, h4 {
	margin-block-end: 0;
	margin-inline-end: 0;
}

#hidden-text-blur {
	filter: blur(10px);
	-webkit-filter: blur(10px);
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.table-wrapper {
	overflow-x: auto;
}

#hidden-text table {
	margin: auto;
	border-collapse: collapse;
}

#hidden-text table th {
	background-color: #0001;
}

#hidden-text table td, table th {
	border: 1px solid #0005;
	padding: 4px;
	text-align: center;
}

#hidden-text {
	position: relative;
}

#hidden-text-explainer {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	box-sizing: border-box;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 1.5em;
	text-shadow: 0 0 5px #fff;
}

.result-section math {
	overflow-x: auto;
	overflow-y: hidden;
	padding: 5px;
}

